...
			android:title="@string/Settings_AutomatedTesting_RunAutomatically_Footer"
			app:iconSpaceReserved="false" />
	</PreferenceScreen>
	<PreferenceScreen
		android:icon="@drawable/privacy"
		android:key="@string/privacy"
		android:title="@string/Settings_Privacy_Label">
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="@string/upload_results"
			android:title="@string/Settings_Sharing_UploadResults"
			app:iconSpaceReserved="false" />
		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="@string/send_crash"
			android:title="@string/Settings_Privacy_SendCrashReports"
			app:iconSpaceReserved="false" />
...
