<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_marginHorizontal="8dp"
	android:orientation="horizontal">

	<com.google.android.material.textfield.TextInputLayout
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:errorEnabled="true">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/editText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/color_black"
			android:hint="@string/Settings_Websites_CustomURL_URL"
			android:inputType="textUri"
			android:paddingEnd="48dp"
			android:text="@string/http" />
	</com.google.android.material.textfield.TextInputLayout>

	<ImageButton
		android:id="@+id/delete"
		style="@style/Widget.MaterialComponents.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|end"
		android:layout_marginEnd="6dp"
		android:layout_marginBottom="6dp"
		android:minWidth="0dp"
		android:contentDescription="@string/Modal_Delete"
		android:rotation="45"
		android:src="@drawable/add_circle_outline"
		app:tint="@color/color_red8" />
</FrameLayout>
