...
  <string name="Test_WebConnectivity_Fullname">Web Connectivity Test</string>
  <string name="Test_NDT_Fullname">NDT Speed Test</string>
  <string name="Test_Dash_Fullname">DASH Streaming Test</string>
  <string name="Test_WhatsApp_Fullname">WhatsApp Test</string>
  <string name="Test_Telegram_Fullname">Telegram Test</string>
  <string name="Test_FacebookMessenger_Fullname">Facebook Messenger Test</string>
  <string name="Test_Psiphon_Fullname">Psiphon Test</string>
  <string name="Test_Tor_Fullname">Tor Test</string>
  <string name="Test_RiseupVPN_Fullname">RiseupVPN Test</string>
  <string name="Test_Signal_Fullname">Signal Test</string>
  <string name="Settings_Title">Settings</string>
  <string name="Settings_Error_TestDurationTooLow">The amount of time you have set for the test duration is too low.</string>
  <string name="Settings_About_Label">About News Media Scan</string>
  <string name="Settings_About_Content_Paragraph">This app is the product of close cooperation between Deutsche Welle (DW) and OONI.\n\n_About DW:_ Unbiased information for free minds – that is the DW brand promise. As an independent media company, Germany’s international news broadcaster informs people around the world. With programming in 32 languages, DW connects people across the globe via TV,
...
